fluxcd/clusters/pi/pihole/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.168.86.1
      tolerations:
        - effect: NoSchedule
          key: vm
          operator: "Equal"
          value: "true"

      containers:
        - name: pihole
          image: pihole/pihole:2026.09.0
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
              name: pihole-web
          resources:
            requests:
              cpu: 1000m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi

          volumeMounts:
            - name: pihole-configs
              mountPath: /etc/pihole/
              subPath: etc/pihole/
            - name: pihole-configs
              mountPath: /etc/dnsmasq.d/
              subPath: etc/dnsmasq.d/

      volumes:
        - name: pihole-configs
          persistentVolumeClaim:
            claimName: pihole-configs
