fluxcd/clusters/pi/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.86.53
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  externalTrafficPolicy: Local
  ports:
    - name: pihole-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: pihole-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: pihole-web
      protocol: TCP
      port: 80
      targetPort: pihole-web
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dup
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.86.54
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  externalTrafficPolicy: Local
  ports:
    - name: pihole-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: pihole-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: pihole-web
      protocol: TCP
      port: 80
      targetPort: pihole-web
