fluxcd/clusters/pi/pihole/pihole.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    name: pihole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2025.03.0
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
              name: pihole-web
          volumeMounts:
            - name: pihole-configs
              mountPath: /etc/pihole/
              subPath: etc/pihole/
            - name: pihole-configs
              mountPath: /etc/dnsmasq.d/
              subPath: etc/dnsmasq.d/

      volumes:
        - name: pihole-configs
          persistentVolumeClaim:
            claimName: pihole-configs
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.86.54
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  externalTrafficPolicy: Local
  ports:
    - name: pihole-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: pihole-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: pihole-web
      protocol: TCP
      port: 80
      targetPort: pihole-web
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dup
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.86.53
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  externalTrafficPolicy: Local
  ports:
    - name: pihole-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: pihole-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: pihole-web
      protocol: TCP
      port: 80
      targetPort: pihole-web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress-route
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pihole.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: pihole
          port: 80
        - name: pihole-dup
          port: 80
    - match: Host(`pihole.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: pihole
          port: 80
        - name: pihole-dup
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
